--- a/ScreenCapture/ScreenCapture.csproj
+++ b/ScreenCapture/ScreenCapture.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-   <!-- <TargetFramework>net6.0-windows</TargetFramework> -->
-    <TargetFramework>net6.0-windows$([Microsoft.Build.Utilities.ToolLocationHelper]::GetLatestSDKTargetPlatformVersion('Windows', '10.0'))</TargetFramework>
+ <TargetFramework>net6.0-windows</TargetFramework>  
+    <!--   <TargetFramework>net6.0-windows$([Microsoft.Build.Utilities.ToolLocationHelper]::GetLatestSDKTargetPlatformVersion('Windows', '10.0'))</TargetFramework> -->
 
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
@@ -18,18 +18,17 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       </PackageReference>
-    
+      <!-- 
    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.1.635-beta">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.1" /> -->
   
   </ItemGroup>
   
     <ItemGroup>
       <ProjectReference Include="..\CaptureSampleCore\CaptureSampleCore.csproj" />
-      <ProjectReference Include="..\Composition.WindowsRuntimeHelpers\Composition.WindowsRuntimeHelpers.csproj" />
     </ItemGroup>
   
     <ItemGroup>
